# inscraper

./: .env.example  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
app/: cache.py  main.py  models.py  playwright_scraper.py  scraper.py  storage.py  vpn_controller.py
tests/: test_scrapers.py
