[project]
name = "instcaper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.7.0",
    "fastapi>=0.136.1",
    "httpx>=0.27.0",
    "playwright>=1.59.0",
    "playwright-stealth>=2.0.3",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
